Bug 195464 - Crash after a software of video
Summary: Crash after a software of video
Status: RESOLVED FIXED
Alias: None
Product: kmplayer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Koos Vriezen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-06 15:14 UTC by Anthony_PM
Modified: 2009-06-06 18:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony_PM 2009-06-06 15:14:30 UTC
Application that crashed: kmplayer
Version of the application: 4.1.3 (KDE 4.1.3) "release 4.9"
KDE Version: 4.2.88 (KDE 4.2.88 (KDE 4.3 >= 20090527)) "release 1"
Qt Version: 4.5.1
Operating System: Linux 2.6.27.21-0.1-pae i686
Distribution: "openSUSE 11.1 (i586)"

 -- Backtrace:
Application: KMPlayer (kdeinit), signal: Segmentation fault
[KCrash Handler]
#6  0xb690ebe1 in QWidget::testAttribute_helper(Qt::WidgetAttribute) const () from /usr/lib/libQtGui.so.4
#7  0xb69148a8 in QWidget::effectiveWinId() const () from /usr/lib/libQtGui.so.4
#8  0xb7362aeb in KMessageBox::error (parent=0x1c, text=@0xbfc63fc8, caption=@0xbfc63fc4, options={i = -1077526592}) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/dialogs/kmessagebox.cpp:813
#9  0xb499f68d in ?? () from /usr/lib/libkdeinit4_kmplayer.so
#10 0xb499f777 in ?? () from /usr/lib/libkdeinit4_kmplayer.so
#11 0xb7f3cdc8 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#12 0xb7f3e552 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb4996993 in ?? () from /usr/lib/libkdeinit4_kmplayer.so
#14 0xb4999633 in ?? () from /usr/lib/libkdeinit4_kmplayer.so
#15 0xb48ee18d in KMPlayer::PartBase::~PartBase() () from /usr/lib/libkmplayercommon.so
#16 0xb7b3d098 in KParts::Part::slotWidgetDestroyed (this=0x810e448) at /usr/src/debug/kdelibs-4.2.88svn973768/kparts/part.cpp:354
#17 0xb7b3d1ab in KParts::Part::qt_metacall (this=0x810e448, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfc643ec) at /usr/src/debug/kdelibs-4.2.88svn973768/build/kparts/part.moc:76
#18 0xb7b3d20a in KParts::ReadOnlyPart::qt_metacall (this=0x810e448, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfc643ec) at /usr/src/debug/kdelibs-4.2.88svn973768/build/kparts/part.moc:154
#19 0xb433f26a in KMediaPlayer::Player::qt_metacall (this=0x810e448, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfc643ec)
    at /usr/src/debug/kdelibs-4.2.88svn973768/build/interfaces/kmediaplayer/player.moc:85
#20 0xb48ed6ba in KMPlayer::PartBase::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkmplayercommon.so
#21 0xb7f3cdc8 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#22 0xb7f3d200 in QMetaObject::activate(QObject*, QMetaObject const*, int, int, void**) () from /usr/lib/libQtCore.so.4
#23 0xb7f3d28b in QObject::destroyed(QObject*) () from /usr/lib/libQtCore.so.4
#24 0xb7f3dfd9 in QObject::~QObject() () from /usr/lib/libQtCore.so.4
#25 0xb691884f in QWidget::~QWidget() () from /usr/lib/libQtGui.so.4
#26 0xb433fd20 in ~View (this=0x8177cf8) at /usr/src/debug/kdelibs-4.2.88svn973768/interfaces/kmediaplayer/view.cpp:43
#27 0xb489ae87 in KMPlayer::View::~View() () from /usr/lib/libkmplayercommon.so
#28 0xb7f35f5f in QObjectPrivate::deleteChildren() () from /usr/lib/libQtCore.so.4
#29 0xb691866b in QWidget::~QWidget() () from /usr/lib/libQtGui.so.4
#30 0xb6cf8781 in QMainWindow::~QMainWindow() () from /usr/lib/libQtGui.so.4
#31 0xb74c9dda in ~KMainWindow (this=0x819c848) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/widgets/kmainwindow.cpp:467
#32 0xb750db07 in ~KXmlGuiWindow (this=0x819c848, __vtt_parm=0xb49a99f4) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/xmlgui/kxmlguiwindow.cpp:127
#33 0xb497ef24 in ?? () from /usr/lib/libkdeinit4_kmplayer.so
#34 0xb7f35c45 in qDeleteInEventHandler(QObject*) () from /usr/lib/libQtCore.so.4
#35 0xb7f374db in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#36 0xb691cc20 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#37 0xb6cf9327 in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#38 0xb74c8fc7 in KMainWindow::event (this=0x819c848, ev=0x83c0e70) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/widgets/kmainwindow.cpp:1094
#39 0xb750e39c in KXmlGuiWindow::event (this=0x819c848, ev=0x83c0e70) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/xmlgui/kxmlguiwindow.cpp:131
#40 0xb68c669c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#41 0xb68cea82 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#42 0xb73e4b9d in KApplication::notify (this=0xbfc64efc, receiver=0x819c848, event=0x83c0e70) at /usr/src/debug/kdelibs-4.2.88svn973768/kdeui/kernel/kapplication.cpp:302
#43 0xb7f26adb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#44 0xb7f27725 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#45 0xb7f2791d in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#46 0xb7f5290f in ?? () from /usr/lib/libQtCore.so.4
#47 0xb646c9c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#48 0xb6470083 in ?? () from /usr/lib/libglib-2.0.so.0
#49 0xb6470241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#50 0xb7f52558 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#51 0xb6966975 in ?? () from /usr/lib/libQtGui.so.4
#52 0xb7f250fa in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#53 0xb7f2553a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#54 0xb7f279e9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#55 0xb68c6517 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#56 0xb49a3130 in kdemain () from /usr/lib/libkdeinit4_kmplayer.so
#57 0x0804e2b0 in launch (argc=6, _name=0x808c42c "/usr/bin/kmplayer", args=0x808c48b "", cwd=0x0, envc=1, envs=0x808c490 "DISPLAY=:0.0", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x808c4a1 "linux-g9c0;1244293894;839329;4793_TIME614604") at /usr/src/debug/kdelibs-4.2.88svn973768/kinit/kinit.cpp:671
#58 0x0804ea8d in handle_launcher_request (sock=7, who=<value optimized out>) at /usr/src/debug/kdelibs-4.2.88svn973768/kinit/kinit.cpp:1163
#59 0x0804ef23 in handle_requests (waitForPid=0) at /usr/src/debug/kdelibs-4.2.88svn973768/kinit/kinit.cpp:1356
#60 0x0804fbca in main (argc=2, argv=0xbfc65694, envp=0xbfc656a0) at /usr/src/debug/kdelibs-4.2.88svn973768/kinit/kinit.cpp:1783

Reported using DrKonqi
Comment 1 Koos Vriezen 2009-06-06 18:07:24 UTC
SVN commit 978262 by vriezen:

Check view when showing error messagebox

BUG:195464
Backtrace wasn't sufficient to exacly show where in kmplayer the crash
occurs, so quessing that KMessageBox doesn't like NULL owner widget.
Please reopen when you can reproduce on a newer version

 M  +1 -1      kmplayerprocess.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978262