Check view when showing error messagebox

BUG:195464
Backtrace wasn't sufficient to exacly show where in kmplayer the crash
occurs, so quessing that KMessageBox doesn't like NULL owner widget.
Please reopen when you can reproduce on a newer version

svn path=/trunk/extragear/multimedia/kmplayer/; revision=978262